@@ -1,3 +1,7 @@
+2009-07-19  Marcus Meissner  <marcus@jet.franken.de>
+
+	* config.c: New subsection "status" for all read-only values.
+
 2009-07-15  Axel Waggershauser  <awagger@web.de>
 
 	* config.c: some unnecessary debuglines removed.
